moving classes to packages

--- a/twitter-source/build.gradle
+++ b/twitter-source/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	compile group: 'org.twitter4j', name: 'twitter4j-core', version: '4.0.7'
 }
 
 test {
