Reddit Componet fixed

--- a/reddit-source/build.gradle
+++ b/reddit-source/build.gradle
@@ -26,3 +26,6 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+springBoot {
+	mainClassName = 'is.equinox.cloudflow.source.stockexchange.RedditSourceAppEntry'
+}
