--- a/reddit-source/build.gradle
+++ b/reddit-source/build.gradle
@@ -8,12 +8,15 @@ group = 'is.equinox'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+
 repositories {
 	mavenCentral()
 	jcenter()
 }
 
 dependencies {
+	testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.0-M1')
+	testRuntime('org.junit.jupiter:junit-jupiter-engine:5.7.0-M1')
 	// put Spring Cloud Data Flow dependencies here instead of this
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compile "net.dean.jraw:JRAW:1.1.0"
@@ -21,11 +24,24 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	compile group: 'org.springframework.cloud', name: 'spring-cloud-stream-binder-kafka', version: '3.0.5.RELEASE'
+
+	// string formatting
+	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
+	compile group: 'org.springframework', name: 'spring-context', version: '5.2.7.RELEASE'
+	runtime group: 'org.springframework.cloud', name: 'spring-cloud-dependencies', version: 'Hoxton.SR6', ext: 'pom'
+	compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-stream-rabbit', version: '3.0.6.RELEASE'
+
+	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.apache.kafka:kafka-streams'
+	implementation 'org.springframework.kafka:spring-kafka'
+
 }
 
 test {
 	useJUnitPlatform()
 }
-springBoot {
-	mainClassName = 'is.equinox.cloudflow.source.stockexchange.RedditSourceAppEntry'
-}
+//springBoot {
+//	mainClassName = 'is.equinox.cloudflow.source.reddit.RedditSourceAppEntry'
+//}
