--- a/reddit-source/build.gradle
+++ b/reddit-source/build.gradle
@@ -6,7 +6,8 @@ plugins {
 
 group = 'is.equinox'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '1.8'
+archivesBaseName = 'reddit-source'
 
 
 repositories {
@@ -15,28 +16,31 @@ repositories {
 }
 
 dependencies {
+	compile "net.dean.jraw:JRAW:1.1.0"
+	testCompile group: 'junit', name: 'junit', version: '4.12'
+
 	// put Spring Cloud Data Flow dependencies here instead of this
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compile "net.dean.jraw:JRAW:1.1.0"
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-stream-binder-kafka
 	compile group: 'org.springframework.cloud', name: 'spring-cloud-stream-binder-kafka', version: '3.0.5.RELEASE'
 
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.apache.kafka:kafka-streams'
-	//implementation 'org.springframework.kafka:spring-kafka'
-	//compile group: 'org.springframework.cloud', name: 'spring-cloud-stream-binder-kafka', version: '3.0.5.RELEASE'
-	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
-	runtime group: 'org.springframework.cloud', name: 'spring-cloud-dependencies', version: 'Hoxton.SR6', ext: 'pom'
+	implementation 'org.springframework.kafka:spring-kafka'
 
+	// string formatting
+	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
 }
 
 test {
 	useJUnitPlatform()
 }
-//springBoot {
-//	mainClassName = 'is.equinox.cloudflow.source.reddit.RedditSourceAppEntry'
-//}
