--- a/twitter-source/build.gradle
+++ b/twitter-source/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	compile group: 'org.twitter4j', name: 'twitter4j-core', version: '4.0.7'
+	// https://mvnrepository.com/artifact/org.twitter4j/twitter4j-stream
+	compile group: 'org.twitter4j', name: 'twitter4j-stream', version: '4.0.7'
 	testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.3.1.RELEASE'
 	compile group: 'org.springframework', name: 'spring-context', version: '5.2.7.RELEASE'
 	// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-dependencies
@@ -41,6 +43,8 @@ dependencies {
 
 	// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-stream-binder-kafka
 	compile group: 'org.springframework.cloud', name: 'spring-cloud-stream-binder-kafka', version: '3.0.5.RELEASE'
+	compile group: 'edu.stanford.nlp', name: 'stanford-corenlp', version: '4.0.0'
+	compile group: 'edu.stanford.nlp', name: 'stanford-corenlp', version: '4.0.0', classifier: 'models'
 
 }
 
