Twitter sentiment data updated

--- a/twitter-source/build.gradle
+++ b/twitter-source/build.gradle
@@ -7,6 +7,8 @@ plugins {
 group = 'is.equinox'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
+archivesBaseName = 'twitter-sentiment-source'
+
 
 repositories {
 	mavenCentral()
