--- a/reddit-source/build.gradle
+++ b/reddit-source/build.gradle
@@ -7,7 +7,7 @@ plugins {
 group = 'is.equinox'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
-archivesBaseName = 'reddit-source'
+archivesBaseName = 'reddit-sentiment-source'
 
 
 repositories {
