Add timestamp to the output, change output type from Double[] to String[].

--- a/stock-exchange-time-series/build.gradle
+++ b/stock-exchange-time-series/build.gradle
@@ -34,8 +34,11 @@ dependencies {
     // string formatting
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
-}
+    // https://mvnrepository.com/artifact/org.javatuples/javatuples
+    compile group: 'org.javatuples', name: 'javatuples', version: '1.2'
 
-test {
-    useJUnitPlatform()
+
+    test {
+        useJUnitPlatform()
+    }
 }
