--- a/stock-exchange-time-series/src/main/resources/config.properties
+++ b/stock-exchange-time-series/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 # https://www.alphavantage.co/documentation/
 
-function = TIME_SERIES_DAILY;
+function = TIME_SERIES_INTRADAY;
 symbol = TSLA;
-interval = null;
+interval = 1min;
 api = A5K060RWV2X3BVP5;
