Add method to write output to a csv file. Update output format. Update output parsing method to make use of the json functionality. Update to use api provided by financialmodelingprep as their output is easier to parse using json modules.

--- a/stock-exchange-time-series/src/main/resources/config.properties
+++ b/stock-exchange-time-series/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 # https://www.alphavantage.co/documentation/
 
-function = TIME_SERIES_INTRADAY;
-symbol = TSLA;
-interval = 1min;
-api = A5K060RWV2X3BVP5;
+function = historical-chart
+symbol = TSLA
+interval = 1min
+api = d516597aa6499ad22b6c24d8ae06686d
